--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,1 +1,21 @@
-$red : #FFFF;
+$text: #0F110F;
+$black: #000000;
+
+@import 'fonts';
+@import 'typography';
+@import 'flexboxgrid';
+@import 'navigation';
+
+
+
+body{
+  margin: 0;
+  main{
+    background-image: url('../../img/backgrounds/bg1.jpg');
+    min-height: 100vh;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
