--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -46,6 +46,12 @@ h2{
     color: $text;
     line-height: 21px;
   }
+  a{
+    font-family: 'Roboto-SemiBold', sans-serif;
+    font-size: 16px;
+    color: $green;
+    line-height: 21px;
+  }
   .thin-text{
     font-family: 'Roboto-Thin', sans-serif;
     font-size: 33px;
