--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -1,12 +1,15 @@
 //desktop nav styles
 
 nav{
+  z-index: 10;
   width:  calc(100% - 80px);
   height: 40px;
   position: absolute;
   top: 0;
   padding-top: 5px;
   margin: 0px 40px;
+  opacity: 1;
+
 
   #nav-links{
     float: right;
@@ -23,6 +26,37 @@ nav{
       text-decoration: none;
     }
   }
+
+  #logo{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -60px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 120px;
+    height: 120px;
+    background: rgb(0, 0, 0); //for older browsers
+    background: rgba(0, 0, 0, .6);
+    border-radius: 50%;
+    .logo-container{
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    span{
+      position: absolute;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, 0);
+      bottom: 25px;
+      opacity: 1;
+      color: white;
+      font-size: 1.2em;
+      font-family: 'Abril Fatface';
+    }
+  }
+
   #some{
     float: left;
     margin:0;
@@ -53,10 +87,11 @@ nav{
 //mobile nav styles
 
 //flexbox md width
-@media screen and (max-width: $sm) {
+@media screen and (max-width: $md) {
 
   nav{
     margin: 0px 5px;
+    width: 100%;
 
     #navigation{
       display: none !important;
@@ -84,7 +119,7 @@ nav{
         z-index: 1;
         top: 0px;
         left: 0;
-        background-color:$green;
+        background-color:$tan;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 30px;
