--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -18,10 +18,195 @@ button{
   }
 }
 
+
 .left{
   float: left;
 }
 
 .right{
   float: right;
+}
+
+
+select{
+  background-color: white;
+  padding: 15px 50px 15px 15px;
+  border: none;
+  font-family: 'Roboto-Medium', sans-serif;
+  font-size: 16px;
+  color: $black;
+  line-height: 24px;
+  border: 0;
+  border-radius: 5px;
+  background: url(../../img/caret.svg) no-repeat right white;
+  background-size: contain;
+  -webkit-appearance: none;
+  -moz-appearance:none; /* Firefox */
+  appearance:none;
+  position:relative;
+  cursor: pointer;
+
+}
+
+form{
+  font-family: 'Roboto-Medium', sans-serif;
+  a{
+    color: $text;
+  }
+}
+
+//styles for thumbs up/down selects
+label.thumb{
+  position: relative;
+  & > input[type="radio"]{
+    visibility: hidden;
+    position: absolute;
+  }
+
+  & >input[type="radio"] + img{
+    cursor:pointer;
+    border:3px solid transparent;
+    padding: 50px;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 5px;
+  }
+  & >input[type="radio"] + img:hover{
+    border-color: white;
+  }
+  & >input[type="radio"]:checked + img{
+    border-color: $green;
+  }
+
+  span{
+    position: absolute;
+    bottom: 25px;
+    left: 0;
+    right: 0;
+    font-family: 'Roboto-Medium', sans-serif;
+    font-size: 16px;
+    color: $text;
+    line-height: 24px;
+    pointer-events:none;
+  }
+}
+
+.radio-buttons{
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  padding: 5% 10%;
+
+label {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    text-align: left;
+}
+
+label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+//custom radio button  style
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 17px;
+    width: 17px;
+    border-radius: 50%;
+    border: 3px solid $black;
+    background: transparent
+}
+
+label:hover input ~ .checkmark {
+    background-color:$green;
+}
+
+label input:checked ~ .checkmark {
+    background-color: $green;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+label input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+label .checkmark:after {
+ 	top: 6px;
+	left: 6px;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	background: $black;
+}
+
+}
+
+.preview-slider{
+  //custom slider styles
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+  padding: 5% 5%;
+  .slider {
+    margin: 3% 0 0 0;
+    padding: 0;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+  }
+
+
+  .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: $green;
+      cursor: pointer;
+  }
+
+  .slider::-moz-range-thumb {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: $green;
+      cursor: pointer;
+  }
+}
+
+
+.img-carousel{
+  width: 100%;
+  img{
+    width: 28%;
+    cursor: pointer;
+    -webkit-transition: width 0.2s; /* Safari */
+    transition: width 0.2s;
+
+    &.selected{
+      width: 36%;
+      border: 3px solid $green;
+    }
+  }
+
 }
