--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -54,6 +54,15 @@ body{
   .bg2{
     background-image: url('../../img/backgrounds/bg2.jpg');
   }
+  .bg3{
+    background-image: url('../../img/backgrounds/bg3.jpg');
+  }
+  .bg4{
+    background-image: url('../../img/backgrounds/bg4.jpg');
+  }
+  .bg5{
+    background-image: url('../../img/backgrounds/bg5.jpg');
+  }
 }
 
 @keyframes fadein {
