--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -38,7 +38,7 @@ select{
   line-height: 24px;
   border: 0;
   border-radius: 5px;
-  background: url(../../img/caret.svg) no-repeat right white;
+  background: url(../../img/caret.png) no-repeat right white;
   background-size: contain;
   -webkit-appearance: none;
   -moz-appearance:none; /* Firefox */
