cleaner map data, weather, altitude profile new questions added

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,7 +15,6 @@ $lg: 60em;
 @import 'fonts';
 @import 'typography';
 @import 'common';
-//@import 'flexboxgrid';
 @import 'simple-grid';
 @import 'navigation';
 @import 'footer';
@@ -286,4 +285,39 @@ body{
     display: none;
 
   }
+}
+
+.weather{
+  .weather-icon{
+    display: block;
+  }
+  .weather-temp{
+    display: block;
+  }
+}
+
+.spinner{
+  color: $black;
+  width: 30px;
+  height: 30px;
+  font-size: 2em;
+  -webkit-transform-origin: 50% 58%;
+  transform-origin:50% 58%;
+  -ms-transform-origin:50% 58%; /* IE 9 */
+  -webkit-animation: spin 1s infinite linear;
+  -moz-animation: spin 1s infinite linear;
+  -o-animation: spin 1s infinite linear;
+  animation: spin 1s infinite linear;
+}
+@-moz-keyframes spin {
+  from { -moz-transform: rotate(0deg); }
+  to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(0deg); }
+  to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+  from {transform:rotate(0deg);}
+  to {transform:rotate(360deg);}
 }
