--- a/assets/scss/typography.scss
+++ b/assets/scss/typography.scss
@@ -69,3 +69,37 @@ h2{
     line-height: 33px;
     margin: 20px 0px 10px 0px;
   }
+
+  @media screen and (max-width: $lg){
+
+    h1{
+      font-family: 'Abril Fatface', cursive;
+      font-size: 45px;
+      color: $text;
+      letter-spacing: -1px;
+      line-height: 44px;
+      margin: 20px 0px 15px 0px;
+      }
+
+    h2{
+      font-family: 'Roboto-Medium', sans-serif;
+      font-size: 19px;
+      color: $text;
+      letter-spacing: -0.5px;
+      line-height: 21px;
+      margin: 15px 0px 5px 0px;
+      }
+
+
+      .thin-text{
+        font-family: 'Roboto-Thin', sans-serif;
+        text-shadow: 1px 1px 5px white;
+        font-size: 23px;
+        color: $text;
+        letter-spacing: -0.14px;
+        text-align: center;
+        line-height: 23px;
+        margin: 10px 0px 5px 0px;
+      }
+
+  }
