--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -150,22 +150,19 @@ label input:checked ~ .checkmark {
     background-color: $green;
 }
 
-/* Create the indicator (the dot/circle - hidden when not checked) */
 .checkmark:after {
     content: "";
     position: absolute;
     display: none;
 }
 
-/* Show the indicator (dot/circle) when checked */
 label input:checked ~ .checkmark:after {
     display: block;
 }
 
-/* Style the indicator (dot/circle) */
 label .checkmark:after {
- 	top: 6px;
-	left: 6px;
+ 	top: 5px;
+	left: 5.5px;
 	width: 6px;
 	height: 6px;
 	border-radius: 50%;
@@ -176,7 +173,7 @@ label .checkmark:after {
 
 .checkboxes{
   text-align: left;
-    /* The container */
+
   label {
       display: block;
       position: relative;
@@ -189,8 +186,6 @@ label .checkmark:after {
       -ms-user-select: none;
       user-select: none;
       line-height: 1.5em;
-
-      /* Hide the browser's default checkbox */
      input {
           position: absolute;
           opacity: 0;
@@ -198,7 +193,6 @@ label .checkmark:after {
       }
   }
 
-  /* Create a custom checkbox */
   .checkmark {
       position: absolute;
       top: 0;
@@ -280,9 +274,32 @@ label .checkmark:after {
 
 .img-carousel{
   width: 100%;
-  @media screen and (min-width: $md){
+    span{
+      display: none;
+      &.selected{
+        display: block;
+      }
+    }
+
+    &.count-3{
+      img{
+        width: 28%;
+      }
+    }
+
+    &.count-4{
+      img{
+        width: 20%;
+      }
+    }
+
+    &.count-5{
+      img{
+        width: 15%;
+      }
+    }
+
     img{
-      width: 28%;
       cursor: pointer;
       -webkit-transition: width 0.2s; /* Safari */
       transition: width 0.2s;
@@ -292,20 +309,15 @@ label .checkmark:after {
         border: 3px solid $green;
       }
     }
-  }
+
   @media screen and (max-width: $md){
     img{
-      width: 0;
+      width: 0 !important;
       float: left;
-      cursor: pointer;
-      -webkit-transition: width 0.2s; /* Safari */
-      transition: width 0.2s;
-
       &.selected{
         float: right;
         display: inline-block;
-        width: 100%;
-        border: 3px solid $green;
+        width: 100% !important;
       }
     }
   }
