--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -327,11 +327,13 @@ body{
   }
   .weather-temp{
     display: block;
-    font-size: 25px;
+    font-size: 1.2em;
   }
 }
 
 .spinner{
+  display: block;
+  margin: auto;
   color: $black;
   width: 30px;
   height: 30px;
