--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -20,7 +20,7 @@ nav{
     padding:0;
     margin:0;
     }
-    a:link,a:visited {
+    a,a:link,a:visited {
       color:white;
     	padding:10px 30px;
       text-decoration: none;
