--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -358,3 +358,51 @@ body{
   from {transform:rotate(0deg);}
   to {transform:rotate(360deg);}
 }
+
+.name-box{
+  background-color: rgba(255, 255, 255, 0.6);
+  border: none;
+  font-family: 'Roboto-Medium', sans-serif;
+  padding: 1% 0.5%;
+  margin: 2% 0;
+  border-radius: 5px;
+  width: 50%;
+  font-size: 1.1em;
+}
+.user-box{
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
+  min-height: 120px !important;
+  padding: 2% 0;
+  position: relative;
+  cursor: pointer;
+  .icon_close{
+    z-index: 5;
+    position: absolute;
+    top: -6%;
+    right: -3%;
+    font-size: 2em;
+    color: white;
+    border: 2px solid white;
+    background-color: $tan;
+    border-radius: 50%;
+    &:hover{
+      background-color: $darkTan;
+    }
+  }
+  .initials{
+    margin: 15% auto;
+    width: 80px;
+    height: 80px;
+    background-color: $green;
+    border-radius: 50%;
+    overflow: hidden;
+    span{
+      text-transform: uppercase;
+      color: white;
+      font-size: 1.5em;
+      line-height: 80px;
+      white-space: nowrap;
+    }
+  }
+}
