mobile nav and about page

--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -97,8 +97,10 @@ nav{
       display: none !important;
       visibility: hidden;
     }
+
     #mobile-navigation{
       display: block;
+      margin-left: 5px;
 
       .nav-toggle{
         background-color: transparent;
@@ -122,7 +124,15 @@ nav{
         background-color:$tan;
         overflow-x: hidden;
         transition: 0.5s;
-        padding-top: 30px;
+        padding-top: 5px;
+
+        li{
+          display: block;
+          width: 100%;
+          float: left;
+          margin-bottom: 5px;
+          padding-left: 5px;
+        }
 
         a{
           color: white;
@@ -139,7 +149,36 @@ nav{
         &.open{
           width: 300px !important;
         }
+
+        .mobile-some{
+          float: left;
+          display: inline;
+          padding: 0;
+          margin: 0;
+          width: auto;
+          padding-bottom: 10px;
+          padding-left: 5px;
+          i{
+            &.facebook{
+             color: #3b5998;
+             font-size: 40px;
+             background-color: white;
+             border-radius: 50%;
+            }
+            &.twitter{
+             color: #00aced;
+             font-size: 40px;
+             background-color: white;
+             border-radius: 50%;
+            }
+
+          }
+        }
+
       }
+
+
+
     }
 
 
