--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -346,6 +346,8 @@ label .checkmark:after {
     padding: 0;
     li{
       display: block;
+      margin: 0 !important;
+      padding: 0 !important;
       &:hover{
         text-decoration: underline;
         color: white;
