--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -406,3 +406,25 @@ body{
     }
   }
 }
+
+@function trio($first, $second, $last, $or: 90deg){
+  @return linear-gradient($or, $first 33.3%, $second 33.3%, $second 66.6%, $last 66.6%);
+}
+
+%signal{
+  width: 100%;
+  height: 40px;
+  display: inline-block;
+}
+.hiking{
+  @extend %signal;
+  background: trio(#fbbb00, #fbbb00, #fbbb00, -180deg);
+}
+.mountain{
+  @extend %signal;
+  background: trio(white, #c90217, white, -180deg);
+}
+.alpine{
+  @extend %signal;
+  background: trio(white, mediumblue, white, -180deg);
+}
