--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -428,3 +428,13 @@ body{
   @extend %signal;
   background: trio(white, mediumblue, white, -180deg);
 }
+
+
+#about{
+  background-color: rgba(255,255,255,.4);
+  border-radius: 5px;
+  margin: 3%;
+  .text-container{
+    margin: 3%;
+  }
+}
