--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -8,6 +8,7 @@ button{
   font-family: 'Roboto-Medium';
   color: white;
   text-transform: uppercase;
+  margin: 2px;
 
   &:hover{
     background-color: $darkTan;
