--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -431,11 +431,26 @@ body{
 }
 
 
-#about{
+.text-page{
   background-color: rgba(255,255,255,.4);
   border-radius: 5px;
   margin: 3%;
   .text-container{
     margin: 3%;
+  }
+}
+
+#cookie-info{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: $tan;
+  text-align: center;
+  z-index: 99;
+  a{
+    color: $black;
+  }
+  i{
+    cursor: pointer;
   }
 }
